--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 
 .fields{
     color:grey;
-    font-size: small;
+    font-size: medium;
     text-align: left;
     margin-left: 45px;
 }
@@ -14,7 +14,15 @@ body{
     text-align: center;
     color: rgb(14, 14, 58);
     font-size: larger;
-    background-color: rgb(14, 14, 58);
+    background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(109,255,242,1) 50%, rgba(252,176,69,1) 100%);
+}
+
+.foot{
+    font-size: medium;
+    color: rgb(72, 0, 255);
+    padding: 40px 15px;
+    text-align: center;
 }
 
 .fp{
@@ -35,7 +43,7 @@ body{
 }
 
 .button{
-    margin:20px
+    margin: 20px 0px 0px 0px;
 }
 
 .input1{
