--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -4,6 +4,7 @@ h1{
     font-weight: bolder;
     font-size: 50px;
     margin:10px;
+    color: white;
 }
 
 .main{
@@ -67,4 +68,10 @@ h1{
 .send{
     padding:10px 100px;
     margin-top: 10px;
+}
+
+body{
+    background-image:url(/images/bg1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
