--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,4 +1,8 @@
-
+body{
+    background-image:url(/images/bg1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 h1{
     color: white;
@@ -8,16 +12,23 @@ h1{
 .fields{
     border-radius: 5px;
     padding:2px;
-    margin:5px;   
-    text-align: left;
+    margin:5px;  
+    text-align: center;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 .main{
+    text-align: center;
+    margin-right: 50px; 
+    color:white;
     border: 10px;
-    background-color: white;
     border-radius: 20px;
-    margin: 10px 430px;
     padding: 50px 30px ;
     box-shadow:black;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .signup{
