--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 .main_heading{
-color:blanchedalmond;
+color:white;
 text-align: left;
 }
 
@@ -10,11 +10,17 @@ text-align: left;
     margin-left: 45px;
 }
 
+h2 b{
+    font-size: 40px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
 body{
     text-align: center;
-    color: blanchedalmond;
+    color: white;
     font-size: larger;
-    background-image:url(/images/bg5.jpg);
+    background-image:url(/images/bg1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -32,6 +38,7 @@ body{
     border: transparent;
     color:grey;
     font-size: small;
+    margin-bottom: 10px;
 }
 
 .fp:hover{
@@ -76,6 +83,22 @@ html.fa-events-icons-loading body {
     text-transform: revert;
 }
 
+.signup{
+    display: block;
+    margin-right: 30px;
+    margin-left: auto;
+    color:white;
+    border:2px solid white;
+    border-radius: 20px;
+    font-size: larger;
+}
+
+.signup:hover{
+    background: #fff;
+    color:black;
+    border:2px solid black;
+}
+
 #logbg{
     background:transparent;
     position:static;
@@ -85,4 +108,8 @@ html.fa-events-icons-loading body {
 }
   .input1::placeholder {
     color: rgb(218, 211, 211);
+  }
+
+  .foot{
+    padding-top: 0px;
   }
