--- a/public/css/success.css
+++ b/public/css/success.css
@@ -4,16 +4,24 @@
     margin-bottom: 0px;
     font-weight: bolder;
     font-size: 45px;
+    color: white;
 }
 
+body{
+    background-image:url(/images/bg1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .main h2{
     font-size: 80px;
     margin: 0px 20px;
+    color: white;
 }
 
 .main p{
     font-size: 35px;
+    color: white;
 }
 
 .upload{
@@ -29,7 +37,7 @@ p{
     margin:20px;
     margin-top: 0px;
     text-decoration: none;
-    color:rgb(30, 28, 28);
+    color: white;
     font-weight: bold;
 }
 
