--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@ html.fa-events-icons-loading body {
     text-transform: none;
     font-family: fontawesome;
     font-style: normal;
+    font-size: xx-large;
     text-decoration: inherit;
     text-transform: revert;
 }
