--- a/public/css/success.css
+++ b/public/css/success.css
@@ -18,6 +18,14 @@ body{
     font-family: 'Poppins',sans-serif;
 }
 
+.main-uploader{
+    margin-left:520px
+}
+
+.submit-button{
+    margin-left:95px;
+}
+
 .img-size{
     width: 50px;
     height: 50px;
