--- a/public/pictures.hbs
+++ b/public/pictures.hbs
@@ -15,12 +15,7 @@
                 {{#if imageBased64}}
                     <div class="col-3">
                         <div class="card shadow" style="width: 18rem;">
-                            <img src='data:{{contentType}};base64,{{imageBased64}}' class="card-img-top" alt="...">
-                                <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                            <img src='data:{{contentType}};base64,{{imageBased64}}' alt="..." class="img-thumbnail">
                         </div>
                     </div>
                 {{/if}}
