--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -41,7 +41,7 @@ h1{
 
 .foot{
     font-size: medium;
-    color: rgb(72, 0, 255);
+    color:white;
     padding: 40px 15px;
     margin-bottom: 20px ;
     text-align:center;
