--- a/public/css/success.css
+++ b/public/css/success.css
@@ -92,7 +92,7 @@ p{
 
 .foot{
     font-size: medium;
-    color: rgb(72, 0, 255);
+    color:white;
     padding: 0px 15px;
     text-align: center;
     position: relative;
