--- a/public/pictures.hbs
+++ b/public/pictures.hbs
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/pics.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>hii</h1>
-<section class="mt-5">
-    <div class="row">
-        {{#each images}}
-                {{#if imageBased64}}
-                    <div class="col-3">
-                        <div class="card shadow" style="width: 18rem;">
-                            <img src='data:{{contentType}};base64,{{imageBased64}}' alt="..." class="img-thumbnail">
+    <div class="head">
+        <h2 class="head1">Pic Uploader</h2>
+    </div>
+    <section class="main">
+        <div class="row">
+            {{#each images}}
+                    {{#if imageBased64}}
+                        <div class="col-1">
+                            <img src='data:{{contentType}};base64,{{imageBased64}}' alt="..." class="image img-thumbnail"  ><br>
+                            <a class="download_button" download="download"  href="data:{{contentType}};base64,{{imageBased64}}" title="ImageName"><i class="fa-solid fa-download"></i></a>
                         </div>
-                    </div>
-                {{/if}}
-        {{/each}}
-    </div>     
-</section>
+                    {{/if}}
+            {{/each}}
+        </div>     
+    </section>
+    <footer class="foot">
+        Designed and built by <b>Aaron Nazareth</b>
+    </footer>
 </body>
 </html>
