--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -23,7 +23,7 @@ h1{
 
 .foot{
     font-size: medium;
-    color: rgb(72, 0, 255);
+    color:white;
     padding: 0px 15px;
     margin-top: 380px;
     text-align:center;
