--- a/public/css/success.css
+++ b/public/css/success.css
@@ -61,13 +61,15 @@ p{
 }
 
 .nav{
-   display: flex;
-   margin-top: 0px;
-   flex-direction: row-reverse;
-   margin-right: 45px;
+    display:inline-block;
+    margin-left: 770px;
 }
 
-.nav .links{
+.contact{
+    margin-right: 0px;
+}
+
+.links{
     font-size: x-large;
     background-color: transparent;
     border-top-color: white;
@@ -91,10 +93,10 @@ p{
     border-radius: 20px;
 }
 
-.log{
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-right: 0px;
+.links:hover{
+    background: #fff;
+    color:black;
+    border:2px solid black;
 }
 
 .foot{
