--- a/public/pictures.hbs
+++ b/public/pictures.hbs
@@ -26,7 +26,11 @@
         </div>     
     </section>
     <footer class="foot">
-        Designed and built by <b>Aaron Nazareth</b>
+        <i class="fa-brands fa-github"></i><a href="https://github.com/jevil25">jevil25</a>
+        <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aaron_naz25/">aaron_naz25</a>
+        <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aaron-nazareth-6580311b6/">Aaron Nazareth</a>
+        <i class="fa-regular fa-envelope"></i><a href="mailto:jevil257@gmail.com">jevil257@gmail.com</a><br>
+        Designed and Built by <b>Aaron Nazareth</b>
     </footer>
 </body>
 </html>
