added password change feature and upload confirmation

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -8,7 +8,11 @@ body{
     color:white;
     text-align: left;
     }
-    
+
+.note{
+    text-justify: auto;
+    text-align: center;
+}
 
 h1{
     color: white;
