--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,4 +119,40 @@ html.fa-events-icons-loading body {
     color:white;
   }
 
-  
+  @media only screen and (max-width: 768px) {
+    /*for mobile phones*/
+    .headbutton{
+        display: inline-flex;
+        margin-left:300px;
+    }
+
+    h2{
+        margin-right: 190px;
+    }
+
+    .input1{
+        margin-left:30px;
+    }
+
+    .button{
+        margin-left: 30px;
+    }
+
+    body{
+        text-align: center;
+        color: white;
+        font-size: larger;
+        background-image:url(/images/bg1.jpg);
+        background-repeat: no-repeat;
+        background-size:inherit;
+        width:100%;
+    }
+  }
+
+  @media only screen and (max-width: 1024px) {
+    /*for mobile phones*/
+    .headbutton{
+        display: inline-flex;
+        margin-left:700px;
+    }
+}
