--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.2.0-dist/css/bootstrap.css">
     <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" />
+    <link href="./dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1 class="animate__animated animate__flip animate__slow main_heading ">Pic Uploader</h1>
+    <h1 class="text-3xl font-bold underline">Pic Uploader</h1>
     <div class="headbutton">
         <form action="/contact" method="POST"><button class="signup btn">Contact</button></form>
         <form action="/signup" method="POST"><button class="signup btn">Register</button></form>
