--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,11 +9,13 @@
     <link href="./dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="text-3xl font-bold underline">Pic Uploader</h1>
-    <div class="headbutton">
-        <form action="/contact" method="POST"><button class="signup btn">Contact</button></form>
-        <form action="/signup" method="POST"><button class="signup btn">Register</button></form>
+<body class="bg-custom_black text-custom_white">
+    <div class="mx-14 mt-8 flex flex-row border border-solid border-custom_border rounded-3xl">
+        <h1 class="text-3xl font-bold m-3 text-custom_white">Pic Uploader</h1>
+        <div class="flex flex-row justify-end w-3/4 m-5">
+            <form action="/contact" method="POST"><button class="text-xl rounded-md mr-10 text-custom_white">Contact</button></form>
+            <form action="/signup" method="POST"><button class="text-xl rounded-md text-custom_white">Register</button></form>
+        </div>
     </div>
     <br>
     <div id="logbg">
