--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body class="bg-custom_black text-custom_white">
-    <div class="mx-14 mt-8 flex flex-row border border-solid border-custom_border rounded-3xl">
+    <div class="mx-14 mt-8 flex flex-row justify-center items-center border-2 border-solid border-custom_border rounded-3xl">
         <h1 class="text-3xl font-bold m-3 text-custom_white">Pic Uploader</h1>
         <div class="flex flex-row justify-end w-3/4 m-5">
             <form action="/contact" method="POST"><button class="text-xl rounded-md mr-10 text-custom_white">Contact</button></form>
@@ -18,13 +18,15 @@
         </div>
     </div>
     <br>
-    <div id="logbg">
-        <h2><b>Login</b></h2><br>
-        <form action="/send" method="POST">
-            <input type="email" required placeholder="  &#xf0e0; Email" class="input1" name="email"><br>
-            <input type="password" required placeholder="  &#xf023; Password" class="input1" name="password"><br>
-            <button class="button btn btn-primary">Login</button><br>
-        </form>
+    <div class="flex flex-col justify-center items-center">
+        <h2 class="text-3xl font-bold">Login</h2><br>
+        <div>
+            <form action="/send" method="POST" class="flex flex-col items-center justify-center">
+                <input class="py-4 px-10 mb-1 bg-custom_black border-2 border-custom_border rounded-3xl" type="email" required placeholder="  &#xf0e0; Email" class="input1" name="email"><br>
+                <input class="py-4 px-10 mb-1 bg-custom_black border-2 border-custom_border rounded-3xl" type="password" required placeholder="  &#xf023; Password" class="input1" name="password"><br>
+                <button class="bg-custom_black border-2 border-solid border-custom_border px-5 py-3 rounded-3xl text-sm items-center justify-center">Login</button><br>
+            </form>
+        </div>
         <form action="/forpass" method="POST">
             <button class="fp btn" name="forgotpassword">Forgot Password?</button><br>
         </form>
