--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -5,36 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="dist/output.css">
     <title>Document</title>
 </head>
-<body>
-    <h1 class="animate__animated animate__flip animate__slow main_heading ">Pic Uploader</h1>
-    <h1>Signup</h1>
-    <div class="main">
+<body class="bg-custom_black text-custom_white font-sans">
+    <div class="mx-14 mt-6 flex flex-row justify-center items-center border-2 border-solid border-custom_border rounded-full mobile:mx-5">
+        <h1 class="text-3xl font-bold m-3 text-custom_white laptop:text-2xl tablet:text-xl mobile:relative right-8">Pic Uploader</h1>
+        <div class="flex flex-row justify-end w-3/4 m-5 laptop:w-[60vw] tablet:w-[40vw] mobile:w-[20vw]">
+            <button type="button" class="invisible mobile:visible relative left-40">
+                <i class="fas fa-align-justify"></i>
+            </button>
+            <form action="/contact" method="POST"><button class="text-xl rounded-md mr-10 text-custom_white hover:text-slate-400 laptop:mr-7 tablet:text-sm mobile:invisible">Contact</button></form>
+            <form action="/" method="get"><button class="text-xl rounded-md text-custom_white  hover:text-slate-400 tablet:text-sm mobile:invisible">Login</button></form>
+        </div>
+    </div>
+    <h1 class="mt-8 text-xl mb-4 flex justify-center border-2 border-custom_border rounded-full font-bold px-5 mx-[38vw] py-2">Signup</h1>
+    <div class="mx-5 flex items-center justify-center">
         <form action="/senddata" method="POST">
-            <div class="text">Enter First Name*: <input name="firstname" type="text" placeholder="First Name" class="fields" required></div><br>
-            <div class="text">Enter Last Name: <input name="lastname" type="text" placeholder="Last Name" class="fields"></div><br>
-            <div class="text">Enter email*: <input name="email" type="email" placeholder="xyz@gmail.com" class="fields" required></div><br>
-            <div class="text">Enter Number*: <input name="number" type="text" placeholder="1234567890" class="fields" required></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Enter First Name*:</div> <input name="firstname" type="text" placeholder="First Name" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Enter Last Name: </div><input name="lastname" type="text" placeholder="Last Name" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8"></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Enter email*:</div> <input name="email" type="email" placeholder="xyz@gmail.com" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Enter Number*: </div><input name="number" type="text" placeholder="1234567890" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
             <fieldset>
-            <div class="text">Enter gender*: <input type="radio" value="Male" class="fields" name="gender" required>Male  <input type="radio" name="gender" class="fields" value="Female" required>Female</div>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Enter gender*:</div> <input type="radio" value="Male" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" name="gender" required>Male  <input type="radio" name="gender" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8 ml-2 flex items-center" value="Female" required>Female</div>
             </fieldset>
-            <div class="text">Create password*: <input name="password" type="password" placeholder="password" class="fields" required></div><br>
-            <div class="text">Repeat password*: <input name="confirmpassword" type="password" placeholder="password" class="fields" required></div><br>
-            <div class="text">Recovery code*: <input minlength="4" name="recoveryCode" type="password" placeholder="Recovery Code" class="fields" required></div><br>
-            <div class="text"><button class="btn btn-primary signup">Signup</button></div>
-            <div class="note"><b>Note:</b> <div style="text-align:center">Never lose your recovery code.</div></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Create password*: </div><input name="password" type="password" placeholder="password" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Repeat password*: </div><input name="confirmpassword" type="password" placeholder="password" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
+            <div class="flex flex-row mb-5"><div class="w-[150px] flex items-center"> Recovery code*: </div><input minlength="4" name="recoveryCode" type="password" placeholder="Recovery Code" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
+            <div class="flex items-center justify-center"><button class="btn btn-primary signup border-2 border-custom_border rounded-full py-3 px-8">Signup</button></div>
+            <div class="flex flex-row my-5 items-center justify-center"><b class="mr-3">Note:</b> <div>Never lose your recovery code.</div></div><br>
         </form>
     </div>
-    <footer class="foot">
-        <i class="fa-brands fa-github"></i><a href="https://github.com/jevil25">jevil25</a>
-        <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aaron_naz25/">aaron_naz25</a>
-        <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aaron-nazareth-6580311b6/">Aaron Nazareth</a>
-        <i class="fa-regular fa-envelope"></i><a href="mailto:jevil257@gmail.com">jevil257@gmail.com</a><br>
-        Designed and Built by <b>Aaron Nazareth</b>
+    <footer class="flex items-center justify-center mb-3">
+        Designed and Built by <b class="ml-2">Aaron Nazareth</b>
     </footer>
 </body>
 </html>
