--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/99352e98c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/output.css">
-    <script src="public/js/nav.js"></script>
     <title>Document</title>
 </head>
 <body class="bg-custom_black text-custom_white font-sans">
-    <div class="nav-main mx-14 mt-6 flex flex-row justify-center items-center border-2 border-solid border-custom_border rounded-full mobile:mx-5" n>
-        <h1 class="text-3xl font-bold m-3 text-custom_white laptop:text-2xl tablet:text-xl mobile:relative right-8">Pic Uploader</h1>
-        <div class="flex flex-row justify-end w-3/4 m-5 laptop:w-[60vw] tablet:w-[40vw] mobile:w-[20vw] justify-center">
-            <button type="button" class="invisible mobile:visible relative left-[60px] " onclick="toggleMenu();">
+    <div class="nav-main mx-14 mt-6 flex flex-row justify-center items-center border-2 border-solid border-custom_border rounded-full mobile:mx-5 mobile:mb-24" n>
+        <h1 class="text-3xl font-bold m-3 text-custom_white laptop:text-2xl tablet:text-xl mobile:relative mobile:right-8 mobile:text-[30px]">Pic Uploader</h1>
+        <div class="flex flex-row justify-end w-3/4 m-5 laptop:w-[60vw] tablet:w-[40vw] mobile:w-[20vw] mobile:justify-center">
+            <button type="button" class="invisible mobile:visible mobile:relative mobile:left-[60px] " onclick="toggleMenu();">
                 <i class="fas fa-align-justify"></i>
             </button>
-            <div class="nav-links flex flex-row mobile:invisible hidden mobile:flex-col justify-center items-center relative top-[100px] right-[16vw]">
-                <form action="/contact" method="POST"><button class="contact text-xl rounded-md mr-10 text-custom_white hover:text-slate-400 laptop:mr-7 tablet:text-xl mobile:justify-center items-center border-b-2 border-custom_border">Contact</button></form>
-                <form action="/" method="get"><button class="login text-lg rounded-md text-custom_white  hover:text-slate-400 tablet:text-xl mobile:justify-center items-center border-b-2 border-custom_border relative right-4 ">Login</button></form>
+            <div class="visible nav-links flex flex-row mobile:invisible mobile:flex-col mobile:justify-center mobile:items-center mobile:relative mobile:top-[120px] mobile:right-[20vw]">
+                <form action="/contact" method="POST"><button class="contact text-xl rounded-md mr-10 text-custom_white hover:text-slate-400 laptop:mr-7 tablet:text-xl mobile:justify-center mobile:items-center mobile:border-b-2 mobile:border-custom_border mobile:mt-2 mobile:text-2xl ">Contact</button></form>
+                <form action="/" method="get"><button class="login text-lg rounded-md text-custom_white  hover:text-slate-400 tablet:text-xl mobile:justify-center mobile:items-center mobile:border-b-2 mobile:border-custom_border mobile:relative mobile:right-4 mobile:mt-2 mobile:text-2xl mobile:mb-3">Login</button></form>
             </div>
         </div>
     </div>
-    <h1 class="mt-8 text-xl mb-4 flex justify-center border-2 border-custom_border rounded-full font-bold px-5 mx-[38vw] py-2">Signup</h1>
+    <h1 class="mt-8 text-xl mb-4 flex justify-center border-2 border-custom_border rounded-full font-bold px-5 mx-[38vw] py-2 mt-5">Signup</h1>
     <div class="mx-5 flex items-center justify-center">
         <form action="/senddata" method="POST">
             <div class="flex flex-row mb-5 mobile:flex-col mb-2 "><div class="w-[150px] flex items-center mobile:mb-3"> Enter First Name*:</div> <input name="firstname" type="text" placeholder="First Name" class="border-2 border-custom_border bg-custom_black rounded-full py-3 px-8" required></div><br>
@@ -43,4 +42,5 @@
         Designed and Built by <b class="ml-2">Aaron Nazareth</b>
     </footer>
 </body>
+<script src="public/js/nav.js"></script>
 </html>
